static/scss/typo.scss
.h-1 {
  font-size: rem(70);
  margin-bottom: rem(30);
  @extend %gothic;
}

.h-2 {
  font-size: rem(28);
  margin-bottom: rem(10);
}

.h-3 {
  font-size: rem(22);
  margin-bottom: rem(30);
}

.h-4 {
  font-size: rem(18);
}

.h-5 {
  font-size: rem(14);
  margin-bottom: rem(35);
}

.link-pink {
  color: $highlight;
  &:hover {
    color: $pink;
  }
}

//---------------------------------------
// reserved for content editing articles
//---------------------------------------
p {
  font-size: rem(16);
  line-height: 1.7;
  margin: 0 0 rem(30) 0;
}

h1 {
  font-size: rem(22);
  margin: 0 0 rem(30) 0;
  line-height: 1.3;
}

h2 {
  font-size: rem(28);
  margin: rem(60) 0 rem(30) 0;
  line-height: 1.2;
}

h3 {
  font-size: rem(20);
  margin: 0 0 rem(30) 0;
}

h4 {
  font-size: rem(18);
  margin: 0 0 rem(30) 0;
}

h5 {
  font-size: rem(16);
  margin: 0 0 rem(30) 0;
}

h6 {
  font-size: rem(14);
  margin: 0 0 rem(30) 0;
}

img + h3,
img + h4, 
img + blockquote, 
img + p,
.arve-wrapper + h4,
.section .arve-wrapper + blockquote {
  margin-top: rem(40);
}


p + h4 {
  margin-top: rem(46);
}

.section-article {
  margin: rem(80) 0;

  img {
    display: block;
    margin-bottom: rem(30);
    width: 100%;
  }

  iframe {
    display: block;
    margin: 0 auto;
  }

  .arve-play-background, 
  .arve-play-background:focus, 
  .arve-play-background:hover {
    background: url('../../images/play@2x.png') no-repeat center center;
    background-size: rem(66);
    opacity: 1;
  }
}

.section {
  padding: rem(60) 0;

  p, li {
    font-family:"Apercu Pro Light", 'Trebuchet MS', Arial, sans-serif; 
  }

  p, ol, ul, h1, h2, h3, h4, h5, h6 {
    padding: 0 rem(40);
  }

  ol, ul {
    margin-bottom: rem(30);
  }
  
  li {
    font-size: rem(16);
    margin-left: rem(18);
    line-height: 1.7;
  }

  a {
    color: $pink;
    padding-bottom: 1px;
    &:hover {
      border-bottom: 1px solid $pink;
    }
  }

  blockquote {
    background-color: #f5f5f5;
    margin: 0 rem(40);
    p {
      padding: rem(30);
    }
  }
}

